# airhockey-rl-sac-dppo

./: .gitignore  README.md  play.html
airhockey-rl/: .gitignore  DATASET_CARD.md  MINARI_CARD.md  MODEL_CARD.md  README.md  play_local.py  pyproject.toml
airhockey-rl/.github/workflows/: deploy.yml  retrain.yml
airhockey-rl/airhockey/: __init__.py  collect.py  dppo.py  dppo_mlx.py  env.py  eval.py  eval_sac.py  export_onnx.py  physics.py  policy.py  policy_mlx.py  retrain_cycle.py  sac.py  snapshot_opponent.py  storage.py  train_bc.py  train_bc_mlx.py  train_dppo.py  train_dppo_mlx.py  train_sac.py  train_sacn.py
airhockey-rl/app/: Dockerfile  README_SPACE.md  SPEC.md  server_reference.py
airhockey-rl/ckpt/: eval.csv  goals.csv  sac_expert.best.pt  sac_expert.pt  train.csv
airhockey-rl/claude_skills/airhockey-rl-doctor/: SKILL.md
airhockey-rl/scripts/: build_minari_dataset.py  colab_train.md  setup_hf_bucket.md  setup_hf_space.md  train_colab.ipynb  upload_demos_to_dataset.py  upload_to_hub.py
airhockey-rl/scripts/gymnasium_robotics_pr/: docs.md  env_v0.py
